# rge1

./: .gitignore  LICENSE  README.md
babashka/: flake.nix  rge1.clj
bqn/: flake.nix  rge1.bqn
c/: Makefile  flake.nix  rge1.c
cc/: .gitignore  Makefile  flake.nix  rge1.cc
haskell/: Main.hs  rge1.cabal
janet/: flake.nix  main.janet  project.janet
k/: rge1.k
lisp/: Makefile  package.lisp  rge1.asd  rge1.lisp
mojo/: .gitignore  mojoproject.toml  pixi.toml  rge1  rge1.mojo
ocaml/: dune-project
raku/: flake.nix  rge1.raku
rust/: Cargo.toml
rust-par/: Cargo.toml
rust-par/src/: main.rs
rust-seq/: Cargo.toml
rust-seq/src/: main.rs
rust/src/: main.rs
scheme/: flake.nix  rge1.scm  rge1.ss
wasm/: flake.nix  rge1.ts  rge1.wat
zig/: build.zig  build.zig.zon
zig/src/: main.zig
