cabal-version: 3.6
name: rge1
version: 0.1.0.0
license: MIT
author: Graham Enos
synopsis: Random ≥ 1 in Haskell
category: Math
build-type: Simple

common warnings
  ghc-options:
    -Wall
    -Wextra

executable rge1
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.20.0.0,
    random ^>=1.3.0,

  default-language: GHC2024
